# MAPF-Competition

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_levels.sh  hospital_domain_mechanics.txt  rerun_unsolved_from_summary.sh  test1.lvl
benchmark_rerun_20260512_171909/: README.txt  remaining_unsolved_levels.txt  summary.csv  summary_stats.txt  unsolved_input_levels.txt
benchmark_rerun_20260513_105612/: README.txt  summary.csv
benchmark_rerun_20260513_105633/: README.txt  remaining_unsolved_levels.txt  summary.csv  summary_stats.txt
benchmark_rerun_20260513_151521/: README.txt  remaining_unsolved_levels.txt  summary.csv  summary_stats.txt  unsolved_input_levels.txt
benchmark_results_20260511_115056/: summary.csv
benchmark_results_20260511_131738/: summary.csv
benchmark_results_20260511_143957/: summary.csv
benchmark_results_20260511_160231/: summary.csv  summary_stats.txt
benchmark_results_20260511_172717/: summary.csv  summary_stats.txt
benchmark_results_20260511_181033/: summary.csv  summary_stats.txt
benchmark_results_20260512_113533/: summary.csv  summary_stats.txt
benchmark_results_20260512_133326/: summary.csv  summary_stats.txt
benchmark_results_20260513_092500/: summary.csv  summary_stats.txt
benchmark_results_20260513_160547/: summary.csv  summary_stats.txt
benchmark_results_20260513_160723/: summary.csv  summary_stats.txt
complevels/: AIMAS7.lvl  AMC.lvl  BigSplit.lvl  Ccropper.lvl  ClosedAI.lvl  DASH.lvl  DECrunchy.lvl  DatzCrazy.lvl  EpicfAIl.lvl  GHandDirt.lvl  GroupEZ.lvl  ISO.lvl  Lily.lvl  LiteralAI.lvl  MADS.lvl  MAGiC.lvl  MAchoupo2.lvl  MArtians.lvl  MAybetwo.lvl  MAzonakis.lvl  Minchia.lvl  NameHere.lvl  PFarthing.lvl  PokeNOM.lvl  QRscammer.lvl  TBSTANS1.lvl  TeamAgent.lvl  TheGate.lvl  TideMazes.lvl  TourDeDTU.lvl  VNN.lvl  ZOOM.lvl  crayCray.lvl  doggy.lvl  donkeyK.lvl  help.lvl  jAIl.lvl  merRAM.lvl  mosAIc.lvl  noone.lvl  (+5 more)
docs/: benchmark_failure_analysis.md  benchmark_failure_todo.md  cbs_solver_review.md  competitive_solver_architecture.md  complevel_review.md  masimple_remaining_work_todo.md  notes.md  solver_impact_todo.md
(+159 files in other folders)
